--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Welcome to Rahul Cloud</h1>
 	                        <p class="hero-paragraph">This is My Demo website which i use for demo and stuff...</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="https://www.linkedin.com/in/rchauhan2/">LinkedIn</a><a class="button" href="www.rahulchauhan.co.in">Website</a></div>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://www.linkedin.com/in/rchauhan2/">LinkedIn</a><a class="button" href="http://www.rahulchauhan.co.in">Website</a></div>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
